--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1 >In The Name Of God</h1>
-    <h2 style="font-size: 50px;">1404/11/02</h2>
+    <h2 style="font-size: 50px;">1404/11/03</h2>
     <div style="color: rgb(23, 32, 157) ; font-size: x-large;">
-    <h3>9th Day: lesson: 62- ; ()</h3>
+    <h3>10th Day: lesson: 68- ; ()</h3>
+    <h3>9th Day: lesson: 62-67 ; (6)</h3>
     <h3>8th Day: lesson: 57-62 ; (6)</h3>
     <h3>7th Day: lesson: 54-56 ; (3)</h3>
     <h3>6th Day: lesson: 45-53 ;(9)</h3>
