--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 <body>
     <h1 >In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/05</h2>
-    <div style="color: rgb(23, 32, 157) ; font-size: x-large;">
-    <h3>12th Day: lesson: 77- ; ()</h3>
-    <h3>11th Day: lesson: 70-76 ; (7)</h3>
-    <h3>10th Day: lesson: 68-69 ; (2)</h3>
-    <h3>9th Day: lesson: 62-67 ; (6)</h3>
-    <h3>8th Day: lesson: 57-62 ; (6)</h3>
-    <h3>7th Day: lesson: 54-56 ; (3)</h3>
-    <h3>6th Day: lesson: 45-53 ;(9)</h3>
-    <h3>5th Day: lesson: ---</h3>
-    <h3>4th Day: lesson: 35-44 ; (10)</h3>
-    <h3>3rd Day: lesson: 21-34 ;(15)</h3>
-    <h3>2nd Day: lesson: ---</h3>
-    <h3>1st Day: lesson: 1-19 ; (19)</h3>
-    </div>
+    <ul style="color: rgb(23, 32, 157) ; font-size: x-large;">
+    <li>12th Day: lesson: 77- ; (9)</li>
+    <li>11th Day: lesson: 70-76 ; (7)</li>
+    <li>10th Day: lesson: 68-69 ; (2)</li>
+    <li>9th Day: lesson: 62-67 ; (6)</li>
+    <li>8th Day: lesson: 57-62 ; (6)</li>
+    <li>7th Day: lesson: 54-56 ; (3)</li>
+    <li>6th Day: lesson: 45-53 ;(9)</li>
+    <li>5th Day: lesson: ---</li>
+    <li>4th Day: lesson: 35-44 ; (10)</li>
+    <li>3rd Day: lesson: 21-34 ;(15)</li>
+    <li>2nd Day: lesson: ---</li>
+    <li>1st Day: lesson: 1-19 ; (19)</li>
+    </ul>
     <script src="./app.js"></script>
 </body>
 </html>
