--- a/1.bulb-exercise/index.html
+++ b/1.bulb-exercise/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img class="oo-img" src="./pics/bulboff.gif" alt="" />
-    <button class="button">Turn on the lamp</button>
+    <button class="button">Turn ON the bulb</button>
 
     <script src="./js/app.js"></script>
   </body>
