--- a/2.validation-exercise/index.html
+++ b/2.validation-exercise/index.html
@@ -16,18 +16,13 @@
       </header>
       <main class="w-full space-y-3">
         <div class="input-card">
-          <input
-            type="text"
-            placeholder="نام کاربری ..."
-            class="input username"
+          <input type="text" placeholder="نام کاربری ..." class="input username"
             autocomplete="off"
           />
           <p class="message hidden username-message"></p>
         </div>
         <div class="input-card">
-          <input
-            type="password"
-            placeholder="گذرواژه ... "
+          <input type="password" placeholder="گذرواژه ... "
             class="input password"
           />
           <p class="message hidden password-message"></p>
