--- a/0.javascript-test/index.html
+++ b/0.javascript-test/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1 id="h1yy">In The Name Of God</h1>
-    <h2 style="font-size: 50px;">1404/11/07</h2>
+    <h2 style="font-size: 50px;">1404/11/09</h2>
     <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: x-large;">
-    <li>14th Day: lesson: 4- ; ()</li>
-    <li>13th Day: lesson: --- ; ()</li>
+    <li>16th Day: lesson:  ; ()</li>
+    <li>15th Day: lesson: --- </li>
+    <li>14th Day: lesson: 4-10 ; (7)</li>
+    <li>13th Day: lesson: --- </li>
     <li>12th Day: lesson: 77-3 ; (11)</li>
     <li>11th Day: lesson: 70-76 ; (7)</li>
     <li>10th Day: lesson: 68-69 ; (2)</li>
@@ -24,7 +26,7 @@
     <li>2nd Day: lesson: ---</li>
     <li>1st Day: lesson: 1-19 ; (19)</li>
     </ul>
-    <button class="click-btn">CLICK ME</button>
+    <!-- <button class="click-btn">CLICK ME</button> -->
     <script src="./app.js"></script>
 </body>
 </html>
