--- a/2.validation-exercise/index.html
+++ b/2.validation-exercise/index.html
@@ -16,15 +16,11 @@
       </header>
       <main class="w-full space-y-3">
         <div class="input-card">
-          <input type="text" placeholder="نام کاربری ..." class="input username"
-            autocomplete="off"
-          />
+          <input type="text" placeholder="نام کاربری ..." class="input username" autocomplete="off"/>
           <p class="message hidden username-message"></p>
         </div>
         <div class="input-card">
-          <input type="password" placeholder="گذرواژه ... "
-            class="input password"
-          />
+          <input type="password" placeholder="گذرواژه ..." class="input password"/>
           <p class="message hidden password-message"></p>
         </div>
       </main>
