--- a/5.onChange event-exercise/project.html
+++ b/5.onChange event-exercise/project.html
@@ -76,11 +76,11 @@
               </label>
               <select class="province-select">
                 <option selected>لطفا استان مبدا را انتخاب نمائید ...</option>
-                <option class="px-4" value="fars">فارس</option>
+                <!-- <option class="px-4" value="fars">فارس</option>
                 <option class="px-4" value="khoozestan">خوزستان</option>
                 <option class="px-4" value="isfahan">اصفهان</option>
                 <option class="px-4" value="mazandaran">مازندران</option>
-                <option class="px-4" value="khorasan">خراسان</option>
+                <option class="px-4" value="khorasan">خراسان</option> -->
               </select>
             </div>
             <div class="">
@@ -89,9 +89,9 @@
               </label>
               <select class="city-select">
                 <option selected>لطفا شهر مبدا انتخاب نمائید ...</option>
-                <option class="px-4">تهران</option>
+                <!-- <option class="px-4">تهران</option>
                 <option class="px-4">شمال</option>
-                <option class="px-4">زنجان</option>
+                <option class="px-4">زنجان</option> -->
               </select>
             </div>
           </div>
@@ -118,6 +118,6 @@
         <img src="./public/image/travel.png" alt="50" />
       </div>
     </main>
-    <script src="./js/app.js"></script>
+    <script src="./js/app copy.js"></script>
   </body>
 </html>
