--- a/0.javascript-test/index.html
+++ b/0.javascript-test/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1 id="h1yy">In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/10</h2>
-    <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: x-large;">
-    <li>17th Day: lesson: 17- ; ()</li>
+    <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: 35px;">
+    <li>18th Day: lesson: 18- ; ()</li>
+    <li>17th Day: lesson: 17-18 ; (1)</li>
     <li>16th Day: lesson: 11-16 ; (6)</li>
     <li>15th Day: lesson: --- </li>
     <li>14th Day: lesson: 4-10 ; (7)</li>
