--- a/0.javascript-test/index.html
+++ b/0.javascript-test/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button class="btn">THIS Is Me !</button>
     <h1 id="h1yy">In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/10</h2>
     <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: 35px;">
@@ -29,6 +30,6 @@
     <li>1st Day: lesson: 1-19 ; (19)</li>
     </ul>
     <!-- <button class="click-btn">CLICK ME</button> -->
-    <script src="./app.js"></script>
+    <script src="./app0.js"></script>
 </body>
 </html>
