--- a/11.custom contextMenu-exercise/index.html
+++ b/11.custom contextMenu-exercise/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sabzlearn - Contextmenu app</title>
+    <title>Z.Khivveh - Contextmenu app</title>
     <link rel="stylesheet" href="./public/css/styles.css" />
   </head>
   <body>
@@ -244,6 +244,6 @@
       </footer>
     </div>
 
-    <script src="./js/app.js"></script>
+    <script src="../0.javascript-test/app0.js"></script>
   </body>
 </html>
