--- a/0.javascript-test/index.html
+++ b/0.javascript-test/index.html
@@ -10,7 +10,7 @@
     <h1 id="h1yy">In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/13</h2>
     <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: 35px;">
-    <li>20th Day: lesson: 34- ; ()</li>
+    <li>20th Day: lesson: 34-41 ; (8)</li>
     <li>19th Day: lesson: 24-33 ; (10)</li>
     <li>18th Day: lesson: 18-22 ; (5)</li>
     <li>17th Day: lesson: 17-18 ; (1)</li>
