--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <!-- <button class="btn">THIS Is Me !</button> -->
-     <audio src="../media/music/CKay - Love Nwantiti ( Tiktok Remix ).mp3" controls></audio>
+     
     <h1 id="h1yy">In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/22</h2>
-    <ul class="unorder-list" style="color: rgb(23, 32, 157) ; font-size: 35px;">
-    <li>23th Day: lesson: 42- ; ()</li>
+    <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
+    <li>23th Day: lesson: 45-50 ; (6)</li>
     <li>22th Day: lesson: 42-44 ; (3)</li>
     <li>21th Day: lesson: ---   </li>
     <li>20th Day: lesson: 34-41 ; (8)</li>
