--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -11,7 +11,8 @@
     <h1 id="h1yy">In The Name Of God</h1>
     <h2 style="font-size: 50px;">1404/11/24</h2>
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
-    <li>25th Day: lesson: 51- ; ()</li>
+    <li>25th Day: lesson: --- ; (3)</li>
+    <li>25th Day: lesson: 51-59 ; (9)</li>
     <li>24th Day: lesson: --- </li>
     <li>23th Day: lesson: 45-50 ; (6)</li>
     <li>22th Day: lesson: 42-44 ; (3)</li>
