--- a/javascript-text-1/21.drag&drop-exercise/index.html
+++ b/javascript-text-1/21.drag&drop-exercise/index.html
@@ -37,7 +37,8 @@
           <p>یادگیری نکست جی اس در 2024</p>
         </article>
       </section>
-      <section class="status-section in-progress">
+      <section class="status-section in-progress" 
+      ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
         <header>
           <p>درحال انجام</p>
         </header>
