--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- <button class="btn">THIS Is Me !</button> -->
@@ -12,6 +13,7 @@
     <h2 style="font-size: 50px;">1404/11/28</h2>
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
         <button class="btn">here</button>
+        <div class="dix"></div>
     <li>29th Day: lesson: 59- </li>
     <li>28th Day: lesson: --- (1)</li>
     <li>27th Day: lesson: --- </li>
