--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -14,7 +14,8 @@
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
         <button class="btn">here</button>
         <div class="dix"></div>
-    <li>29th Day: lesson: 59- </li>
+    <li>30th Day: lesson: 69- () </li>
+    <li>29th Day: lesson: 59-69 (10) </li>
     <li>28th Day: lesson: --- (1)</li>
     <li>27th Day: lesson: --- </li>
     <li>26th Day: lesson: --- (3)</li>
