--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -10,11 +10,12 @@
     <!-- <button class="btn">THIS Is Me !</button> -->
      
     <h1 id="h1yy">In The Name Of God</h1>
-    <h2 style="font-size: 50px;">1404/11/28</h2>
+    <h2 style="font-size: 50px;">1404/11/29</h2>
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
         <button class="btn">here</button>
-        <div class="dix"></div>
-    <li>30th Day: lesson: 69- () </li>
+        <!-- <div class="dix"></div> -->
+    <li>1st Day: 💚7️⃣ lesson: 75- () </li>
+    <li>30th Day: lesson: 69-75 (7) </li>
     <li>29th Day: lesson: 59-69 (10) </li>
     <li>28th Day: lesson: --- (1)</li>
     <li>27th Day: lesson: --- </li>
