--- a/javascript-text-1/27.word counter-exercise/index.html
+++ b/javascript-text-1/27.word counter-exercise/index.html
@@ -29,7 +29,7 @@
       </div>
       <div>
         <p class="sentences">0</p>
-        <p>جلمه</p>
+        <p>جمله</p>
       </div>
     </div>
 
