--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -14,7 +14,7 @@
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
         <button class="btn">here</button>
         <!-- <div class="dix"></div> -->
-    <li>2nd Day: 💚 lesson: 79 () </li>
+    <li>2nd Day: 💚 lesson: 79- () </li>
     <li>1st Day: 💚7️⃣ lesson: 75-79 (5) </li>
     <li>30th Day: lesson: 69-75 (7) </li>
     <li>29th Day: lesson: 59-69 (10) </li>
