--- a/javascript-text-1/0.javascript-test/index.html
+++ b/javascript-text-1/0.javascript-test/index.html
@@ -10,12 +10,14 @@
     <!-- <button class="btn">THIS Is Me !</button> -->
      
     <h1 id="h1yy">In The Name Of God</h1>
-    <h2 style="font-size: 50px;" class="dd">1404/12/01</h2>
+    <h2 style="font-size: 50px;" class="dd">1404/12/02</h2>
     <ul class="order-list" style="color: rgb(23, 32, 157) ; font-size: 25px;">
         <button class="btn">here</button>
         <!-- <div class="dix"></div> -->
-    <li>2nd Day: 💚 lesson: 79- () </li>
+    <li>3rd Day: 💚 Bootstrap-1 </li>
+    <li>2nd Day: 💚1️⃣0️⃣ lesson: 79-84 (5) </li>
     <li>1st Day: 💚7️⃣ lesson: 75-79 (5) </li>
+    <hr>
     <li>30th Day: lesson: 69-75 (7) </li>
     <li>29th Day: lesson: 59-69 (10) </li>
     <li>28th Day: lesson: --- (1)</li>
